--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,32 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+ 
+  "Authentication": {
+    "DefaultScheme": "Bearer",
+    "IdentityProviders": {
+      "Provider1": {
+        "Authority": "https://provider1.com",
+        "Audience": "provider1-audience",
+        "ValidateIssuer": true,
+        "ValidateAudience": true,
+        "ValidateLifetime": true,
+        "ValidateIssuerSigningKey": true,
+        "ValidIssuer": "https://provider1.com",
+        "ValidAudience": "provider1-audience"
+      },
+      "Provider2": {
+        "Authority": "https://provider2.com",
+        "Audience": "provider2-audience",
+        "ValidateIssuer": true,
+        "ValidateAudience": true,
+        "ValidateLifetime": true,
+        "ValidateIssuerSigningKey": true,
+        "ValidIssuer": "https://provider2.com",
+        "ValidAudience": "provider2-audience"
+      }
+    }
+  }
 }
+
